fixed loader z-index

--- a/src/components/UI/Loader/index.module.scss
+++ b/src/components/UI/Loader/index.module.scss
@@ -5,6 +5,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: 1000;
     background-color: white;
 // временно    padding-top: 12em;
    
