--- a/src/components/UI/RouterLoader/index.module.scss
+++ b/src/components/UI/RouterLoader/index.module.scss
@@ -1,6 +1,7 @@
 @use '../../../styles/global' as *;
 .loader {
     position: fixed;
+    z-index: 1000;
     top: 0;
     left: 0;
     right: 0;
